--- a/A M O G U S/HOME.css
+++ b/A M O G U S/HOME.css
@@ -7,7 +7,7 @@ font-family: 'Righteous', cursive;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    color: var(--wheat);
+    color: var(--white-smoke);
     font-family: 'Righteous', cursive;
 }
 :root{
