--- a/A M O G U S/GAME.css
+++ b/A M O G U S/GAME.css
@@ -2,17 +2,16 @@
 /*
     font-family: 'Dongle', sans-serif;
     font-family: 'Righteous', cursive;
-    color: var(--wheat);
 */
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    color: white;
 }
 :root{
     --night: #0b090aff;
     --eerie-black: #161a1dff;
+    --transculent-gray: #3e3e3e38;
     --blood-red: #660708ff;
     --cornell-red: #a4161aff;
     --cornell-red-2: #ba181bff;
@@ -22,6 +21,7 @@
     --white-smoke: #f5f3f4ff;
     --white: #ffffffff;
     --wheat: #f5deb3;
+
 }
 body{
     background-image: url(Images/AMOGUS_BC.jpg);
@@ -32,6 +32,7 @@ body{
     margin: 0 auto;
     display: grid;
     grid-template-rows: 10% 80% 10%;
+    color: var(--white-smoke);
 }
 header{
     display: flex;
@@ -47,14 +48,60 @@ header{
 }
 header img{
     width: 3rem;
-    margin-right: 100%;
+    margin-right: auto;
+}
+h1{
+    width: 100%;
+    text-align: center;
+    margin-right: 3rem;
+}
+h1 pre{
+    font-family: 'Righteous', cursive;
 }
 main{
     width: 80%;
     background-color: var(--eerie-black);
-    display: grid;
     margin: 0 auto;
 }
+.slogan{
+    font-family: 'Righteous', cursive;
+    width: 80%;
+    margin: 0 auto;
+    text-align: center;
+    background-color: var(--transculent-gray);
+    border-radius: 0 0 1rem 1rem;
+    padding: 0.3rem 1rem 1rem 1rem;
+}
+.slogan span span{
+    color: var(--cornell-red-2);
+    display: block;
+    font-size: 2em;
+    padding-bottom: 0.2rem;
+}
+.introduction{
+    display: flex;
+    flex-direction: row;
+    width: 95%;
+    background-color: var(--transculent-gray);
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+    margin: 1rem auto;
+}
+.introduction img{
+    float: right;
+    width: 35%;
+    border-radius: 0.5rem;
+}
+.short-description{
+    font-family: 'Righteous', cursive;
+    min-width: 65%;
+    margin-right: 1rem;
+}
+.short-description ul{
+    list-style: disc;
+    margin: 0.5rem 0  0.5rem 2rem;
+}
+
 footer{
     background-color: var(--cornell-red);
     border-radius: 2rem 2rem 0 0;
