--- a/A M O G U S/GAME.css
+++ b/A M O G U S/GAME.css
@@ -38,7 +38,7 @@ header{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: var(--cornell-red);
+    background-color: var(--cornell-red-2);
     border-radius: 0 0 2rem 2rem;
     border: 0.4rem solid var(--eerie-black);
     border-top: none;
@@ -58,6 +58,15 @@ h1{
 h1 pre{
     font-family: 'Righteous', cursive;
 }
+header nav img:hover {
+    animation: spin-once 0.4s forwards;
+}
+@keyframes spin-once {
+    0% {
+        transform: rotate(0deg);}
+    100% {
+        transform: rotate(360deg);}
+}
 main{
     width: 80%;
     background-color: var(--eerie-black);
@@ -72,13 +81,13 @@ main{
     border-radius: 0 0 1rem 1rem;
     padding: 0.3rem 1rem 1rem 1rem;
 }
-.slogan span span{
+.slogan p span{
     color: var(--cornell-red-2);
     display: block;
     font-size: 2em;
     padding-bottom: 0.2rem;
 }
-.introduction{
+.about-part{
     display: flex;
     flex-direction: row;
     width: 95%;
@@ -87,19 +96,39 @@ main{
     border-radius: 0.5rem;
     margin: 1rem auto;
 }
-.introduction img{
+.about-part img{
     float: right;
     width: 35%;
     border-radius: 0.5rem;
 }
-.short-description{
+.about-text{
     font-family: 'Righteous', cursive;
     min-width: 65%;
-    margin-right: 1rem;
+    padding-right: 0.5rem;
 }
-.short-description ul{
+.about-text ul{
     list-style: disc;
     margin: 0.5rem 0  0.5rem 2rem;
+}
+.about-text ul li{
+    margin-bottom: 0.5rem;
+}
+.red{
+    color: var(--cornell-red);
+}
+
+.maps{
+    display: flex;
+    flex-direction: row;
+    justify-content: right;
+    width: 95%;
+    margin: 0 auto;
+    background-color: var(--transculent-gray);
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+}
+a{
+    color: var(--silver);
 }
 
 footer{
