--- a/A M O G U S/GAME.css
+++ b/A M O G U S/GAME.css
@@ -1,27 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Dongle:wght@700&family=Righteous&display=swap');
-/*
-    font-family: 'Dongle', sans-serif;
-    font-family: 'Righteous', cursive;
-*/
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 :root{
-    --night: #0b090aff;
     --eerie-black: #161a1dff;
     --transculent-gray: #3e3e3e38;
-    --blood-red: #660708ff;
     --cornell-red: #a4161aff;
     --cornell-red-2: #ba181bff;
-    --imperial-red: #e5383bff;
     --silver: #b1a7a6ff;
-    --timberwolf: #d3d3d3ff;
     --white-smoke: #f5f3f4ff;
-    --white: #ffffffff;
-    --wheat: #f5deb3;
-
 }
 body{
     background-image: url(Images/AMOGUS_BC.jpg);
@@ -70,7 +59,7 @@ main{
     width: 80%;
     background-color: var(--eerie-black);
     margin: 0 auto;
-    padding: 1rem;
+    padding: 0.6rem 1rem;
     display: grid;
     grid-template-rows: 0.7fr 2fr 3fr;
 }
