--- a/A M O G U S/GOD.css
+++ b/A M O G U S/GOD.css
@@ -1,8 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Dongle:wght@700&family=Righteous&display=swap');
-/*
-    font-family: 'Dongle', sans-serif;
-    font-family: 'Righteous', cursive;
-*/
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -12,16 +8,11 @@
     --night: #0b090aff;
     --eerie-black: #161a1dff;
     --transculent-gray: #3e3e3e38;
-    --blood-red: #660708ff;
     --cornell-red: #a4161aff;
     --cornell-red-2: #ba181bff;
     --imperial-red: #e5383bff;
     --silver: #b1a7a6ff;
-    --timberwolf: #d3d3d3ff;
     --white-smoke: #f5f3f4ff;
-    --white: #ffffffff;
-    --wheat: #f5deb3;
-    --gold: #e9a01a;
 }
 body{
     background-image: url(Images/AMOGUS_BC.jpg);
@@ -73,7 +64,7 @@ main{
     padding: 0.6rem 1rem;
     font-family: 'Righteous', cursive;
     display: grid;
-    grid-template-columns: 53% 47%;
+    grid-template-columns: 50% 50%;
 }
 .sus{
     color: var(--cornell-red);
@@ -87,8 +78,7 @@ main{
     border-radius: 0.5rem;
     line-height: 1.2rem;
 }
-.god h1{
-    text-align: left;
+.god h2{
     margin-bottom: 0.5rem;
 }
 .god img{
@@ -103,8 +93,7 @@ main{
     margin: 1rem 0;
     line-height: 1.2rem;
 }
-.powers h1{
-    text-align: left;
+.powers h2{
     margin-bottom: 0.5rem;
 }
 .powers img{
@@ -115,18 +104,22 @@ main{
 .info{
     background-color: var(--transculent-gray);
     padding: 0.5rem;
-    border-radius: 0.5rem 0.5rem 0 0;
+    border-radius: 0.5rem;
 }
 .info img{
     width: 20%;
     float: left;
     margin-right: 0.5rem;
 }
+.info h2{
+    text-align: center;
+}
 .disease{
     background-color: var(--transculent-gray);
     padding: 0.5rem;
     text-align: center;
-    margin: 0.3rem 0;
+    margin: 1rem 0;
+    border-radius: 0.5rem;
 }
 .disease ul{
     margin-top: 0.5rem;
@@ -142,9 +135,9 @@ main{
 .behavior{
     background-color: var(--transculent-gray);
     padding: 0.5rem;
-    border-radius: 0 0 0.5rem 0.5rem;
+    border-radius: 0.5rem;
 }
-.behavior h3{
+.behavior h2{
     text-align: center;
 }
 .behavior p{
@@ -153,9 +146,16 @@ main{
 .behavior p:first-of-type{
     text-align: center;
     margin-bottom: 0.5rem;
-}   
+}
+.right-side{
+    background-color: var(--transculent-gray);
+    margin-left: 1rem;
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+    max-height: 90vh;
+}
 .list{
-    min-height: 90%;
+    min-height: 92%;
     display: flex;
     justify-content: space-between;
     flex-direction: column;
@@ -164,15 +164,17 @@ main{
 }
 .list div{
     width: auto;
-    background-color: var(--gold);
+    background-color: var(--cornell-red-2);
     border: solid 0.4rem var(--night);
     border-radius: 0.5rem;
     padding: 0.5rem;
     margin: 0.25rem;
+    transition: 1s ease-out
 
 }
 .list div:hover{
-    box-shadow: 0 0 2.5rem var(--timberwolf);
+    box-shadow: 0 0 2.5rem var(--silver);
+    transition: 0.05s;
 }
 footer{
     background-color: var(--cornell-red);
