--- a/A M O G U S/IMPOSTOR.css
+++ b/A M O G U S/IMPOSTOR.css
@@ -1,26 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Dongle:wght@700&family=Righteous&display=swap');
-/*
-font-family: 'Dongle', sans-serif;
-font-family: 'Righteous', cursive;
-*/
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Righteous', cursive;
+
 }
 :root{
-    --night: #0b090aff;
     --eerie-black: #161a1dff;
-    --blood-red: #660708ff;
+    --transculent-gray: #3e3e3e38;
     --cornell-red: #a4161aff;
     --cornell-red-2: #ba181bff;
-    --imperial-red: #e5383bff;
-    --silver: #b1a7a6ff;
-    --timberwolf: #d3d3d3ff;
     --white-smoke: #f5f3f4ff;
-    --white: #ffffffff;
-    --wheat: #f5deb3;
 }
 body{
     background-image: url(Images/AMOGUS_BC.jpg);
@@ -45,25 +35,75 @@ header{
     width: 85%;
     margin: 0 auto;
 }
+header img{
+    width: 3rem;
+    margin-right: auto;
+}
+h1{
+    width: 100%;
+    text-align: center;
+    margin-right: 3rem;
+}
+h1 pre{
+    font-family: 'Righteous', cursive;
+}
 main{
     width: 80%;
     background-color: var(--eerie-black);
-    display: grid;
-    grid-template-columns: 45% 55%;
     margin: 0 auto;
+    padding: 0.6rem 1rem;
+    font-family: 'Righteous', cursive;
 }
-.text{
+.banner{
+    position: relative;
+}
+.banner img{
+    width: 100%;
+    filter: brightness(25%);
+    border-radius: 0.5rem;
+}
+.banner p {
+    position: absolute;
+    left: 0;
+    top: 0;
+    transform: translate(10%, 20%);
+    width: 60%;
+    height: 50%;
     display: flex;
-    align-items: center;
-    flex-direction: column;
-    margin: auto 0.5rem auto 1rem;
+    align-items: flex-start;
+    justify-content: flex-start;
+    font-size: 4em;
+    line-height: 5rem;
+    text-align: center;
+}
+.lore{
+    background-color: var(--transculent-gray);
+    padding: 0.5rem;
+    margin: 1rem 0;
+    border-radius: 0.5rem;
+}
+.lore p{
+    text-align: justify;
+    padding: 0.5rem;
+    margin-top: 0.5rem;
+    line-height: 1.4rem;
+}
+.how-to{
+    background-color: var(--transculent-gray);
+    padding: 0.5rem;
+    margin: 1rem 0;
+    border-radius: 0.5rem;
+    text-align: center;
+}
+.how-to p{
+    text-align: center;
 }
 .background{
     position: relative;
-    margin: auto 1rem auto 0.5rem;
+    margin: 0.4rem 0;
     padding: 2%;
     border-radius: 1rem;
-    border: 0.2rem solid var(--imperial-red);
+    border: 0.2rem solid var(--cornell-red-2);
     background-color: black;
 }
 .background img{
@@ -93,21 +133,9 @@ footer{
     justify-content: space-between;
     align-items: center;
     flex-direction: row;
+    font-family: 'Righteous', cursive;
 }
-p{
-    text-align: center;
-    line-height: 1.4rem;
-    padding: 0.5rem;
-}
-header img{
-    width: 3rem;
-    margin-right: auto;
-}
-h1{
-    width: 100%;
-    text-align: center;
-    margin-right: 3rem;
-}
+
 header img:hover {
     animation: spin-once 0.4s forwards;
 }
