--- a/A M O G U S/LIFE.css
+++ b/A M O G U S/LIFE.css
@@ -5,12 +5,10 @@
     box-sizing: border-box;
 }
 :root{
-    --night: #0b090aff;
     --eerie-black: #161a1dff;
     --transculent-gray: #3e3e3e38;
     --cornell-red: #a4161aff;
     --cornell-red-2: #ba181bff;
-    --imperial-red: #e5383bff;
     --silver: #b1a7a6ff;
     --white-smoke: #f5f3f4ff;
 }
@@ -23,6 +21,7 @@ body{
     display: grid;
     grid-template-rows: 2fr 21fr 2fr;
     color: var(--white-smoke);
+    font-family: 'Righteous', cursive;
 }
 header{
     display: flex;
@@ -62,118 +61,170 @@ main{
     background-color: var(--eerie-black);
     margin: 0 auto;
     padding: 0.6rem 1rem;
-    font-family: 'Righteous', cursive;
-    display: grid;
-    grid-template-columns: 50% 50%;
+    position: relative;
+}
+main::before{
+    content: "";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url(Images/AMOGUS.png);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: contain; 
+    position: absolute;
+    opacity: 0.08;
+}
+main div{
+    position: relative;
+    z-index: 1;
 }
 .sus{
-    color: var(--cornell-red);
+    color: var(--cornell-red-2);
 }
-.left-side{
-    text-align: justify;
-}
-.god{
+.who-is-amogus{
     background-color: var(--transculent-gray);
+    text-align: center;
+    width: 65%;
+    margin: 0 auto 1rem auto;
     padding: 0.5rem;
     border-radius: 0.5rem;
-    line-height: 1.2rem;
 }
-.god h2{
-    margin-bottom: 0.5rem;
+.grid-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
 }
-.god img{
+.problems{
+    background-color: var(--transculent-gray);
+    border-radius: 0.5rem;
+    padding: 0.5rem;
+}
+.problems h2{
+    text-align: center;
+}
+.tab{
+    display: flex;
+    flex-direction: row;
+    margin: 0 auto;
+}
+.tab img{
     width: 15%;
     float: left;
-    margin: 0 0.5rem 0.5rem 0;
+    margin-left: 0.5rem ;
 }
-.powers{
-    background-color: var(--transculent-gray);
-    padding: 0.5rem;
-    border-radius: 0.5rem;
-    margin: 1rem 0;
-    line-height: 1.2rem;
-}
-.powers h2{
-    margin-bottom: 0.5rem;
-}
-.powers img{
-    width: 30%;
+.tab img:first-child{
     float: right;
-    margin: 0 0 0.5rem 0.5rem;
+    margin: 0 0.5rem 0 0;
 }
-.info{
+.tab p{
+    padding: 1rem 0;
+    text-align: center;
+}
+.intro{
     background-color: var(--transculent-gray);
-    padding: 0.5rem;
     border-radius: 0.5rem;
-}
-.info img{
-    width: 20%;
-    float: left;
-    margin-right: 0.5rem;
-}
-.info h2{
-    text-align: center;
-}
-.disease{
-    background-color: var(--transculent-gray);
     padding: 0.5rem;
-    text-align: center;
     margin: 1rem 0;
-    border-radius: 0.5rem;
 }
-.disease ul{
-    margin-top: 0.5rem;
-    display: grid;
-    justify-content: center;
-    grid-template-columns: 20% 20% 35%;
-    gap: 2rem;
+.intro p{
+    text-align: justify;
 }
-.disease ul li{
-    list-style-type: none;
+.intro p:last-child{
     text-align: center;
+    margin-top: 1rem;
 }
-.behavior{
+.hnilmog{
     background-color: var(--transculent-gray);
+    border-radius: 0.5rem;
     padding: 0.5rem;
-    border-radius: 0.5rem;
+    margin: 1rem 0;
 }
-.behavior h2{
+.hnilmog img{
+    width: 15%;
+    float: left;
+    margin-right: 1rem;
+}
+.hnilmog h2{
     text-align: center;
 }
-.behavior p{
-    margin-bottom: 0.5rem;
+.hnilmog p{
+    text-align: justify;
 }
-.behavior p:first-of-type{
-    text-align: center;
-    margin-bottom: 0.5rem;
+.hnilmog a{
+    text-decoration: none;
+    color: var(--silver);
 }
-.right-side{
+.amonila{
     background-color: var(--transculent-gray);
+    border-radius: 0.5rem;
+    padding: 0.5rem;
+}
+.amonila img{
+    float: right;
+    width: 15%;
     margin-left: 1rem;
-    padding: 0.5rem;
-    border-radius: 0.5rem;
 }
-.list{
-    min-height: 90%;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    align-items: center;
-    font-size: 1.2em;
+.amonila h3{
+    text-align: right;
 }
-.list div{
-    width: auto;
-    background-color: var(--cornell-red-2);
-    border: solid 0.4rem var(--night);
+.amonila p{
+    text-align: justify;
+    padding-bottom: 3rem;
+}
+.beginning{
+    background-color: var(--transculent-gray);
     border-radius: 0.5rem;
     padding: 0.5rem;
-    margin: 0.25rem;
-    transition: 1s ease-out
-
 }
-.list div:hover{
-    box-shadow: 0 0 2.5rem var(--silver);
-    transition: 0.05s;
+.beginning img{
+    width: 15%;
+    float: left;
+    margin-right: 1rem;
+    border-radius: 0.5rem;
+}
+.beginning h2{
+    text-align: center;
+}
+.susler{
+    background-color: var(--transculent-gray);
+    border-radius: 0.5rem;
+    padding: 0.5rem;
+    text-align: justify;
+    margin: 1rem 0;
+}
+.susler a{
+    text-decoration: none;
+    color: var(--silver);
+}
+.susler h3{
+    text-align: right;
+}
+.susler img{
+    width: 20%;
+    float: right;
+    margin-right: 1rem;
+}
+.system{
+    background-color: var(--transculent-gray);
+    border-radius: 0.5rem;
+    padding: 0.5rem;
+    margin: 1rem 0;
+    text-align: justify;
+}
+.system h2{
+    text-align: center;
+}
+.sussy-measurer{
+    background-color: var(--transculent-gray);
+    border-radius: 0.5rem;
+    padding: 0.5rem 0.5rem 1.5rem 0.5rem;
+    text-align: justify;
+}
+.sussy-measurer img{
+    width: 15%;
+    float: left;
 }
 footer{
     background-color: var(--cornell-red);
