--- a/A M O G U S/LIFE.css
+++ b/A M O G U S/LIFE.css
@@ -7,7 +7,6 @@
 :root{
     --eerie-black: #161a1dff;
     --transculent-gray: #3e3e3e38;
-    --cornell-red: #a4161aff;
     --cornell-red-2: #ba181bff;
     --silver: #b1a7a6ff;
     --white-smoke: #f5f3f4ff;
@@ -227,7 +226,7 @@ main div{
     float: left;
 }
 footer{
-    background-color: var(--cornell-red);
+    background-color: var(--cornell-red-2);
     border-radius: 2rem 2rem 0 0;
     border: 0.4rem solid var(--eerie-black);
     border-bottom: none;
