--- a/A M O G U S/IMPOSTOR.css
+++ b/A M O G U S/IMPOSTOR.css
@@ -8,7 +8,6 @@
 :root{
     --eerie-black: #161a1dff;
     --transculent-gray: #3e3e3e38;
-    --cornell-red: #a4161aff;
     --cornell-red-2: #ba181bff;
     --white-smoke: #f5f3f4ff;
 }
@@ -27,7 +26,7 @@ header{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: var(--cornell-red);
+    background-color: var(--cornell-red-2);
     border-radius: 0 0 2rem 2rem;
     border: 0.4rem solid var(--eerie-black);
     border-top: none;
@@ -122,7 +121,7 @@ main{
     height: 100%;
 }
 footer{
-    background-color: var(--cornell-red);
+    background-color: var(--cornell-red-2);
     border-radius: 2rem 2rem 0 0;
     border: 0.4rem solid var(--eerie-black);
     border-bottom: none;
